# utl

./: .clang-format  .gitignore  README.md
include/: ring_buffer.hpp  scope_guard.hpp  temp_buffer.hpp  unique_buffer.hpp
test/: CMakeLists.txt  CMakeSettings.json  test.runsettings
test/ring_buffer/: CMakeLists.txt  catch_ring_buffer.cpp
test/scope_guard/: CMakeLists.txt  catch_scope_guard.cpp
test/temp_buffer/: CMakeLists.txt  catch_temp_buffer.cpp
test/unique_buffer/: CMakeLists.txt  catch_unique_buffer.cpp
